--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>PACTO SATÂNICO</title>
 </head>
 <body>
     <div class="form-structor">
         <div class="signup">
             <h2 class="form-title" id="signup"><span>or</span>Sign up</h2>
             <div class="form-holder">
-                <input type="text" class="input" placeholder="Name" />
-                <input type="email" class="input" placeholder="Email" />
-                <input type="password" class="input" placeholder="Password" />
+                <input type="texto" class="input" placeholder="Nome" />
+                <input type="e-mail" class="input" placeholder="E-mail" />
+                <input type="senha" class="input" placeholder="senha" />
             </div>
             <button class="submit-btn">Sign up</button>
         </div>
@@ -21,8 +21,8 @@
             <div class="center">
                 <h2 class="form-title" id="login"><span>or</span>Log in</h2>
                 <div class="form-holder">
-                    <input type="email" class="input" placeholder="Email" />
-                    <input type="password" class="input" placeholder="Password" />
+                    <input type="e-mail" class="input" placeholder="E-mail" />
+                    <input type="senha" class="input" placeholder="senha" />
                 </div>
                 <button class="submit-btn">Log in</button>
             </div>
@@ -31,3 +31,5 @@
     <script src="main.js"></script>
 </body>
 </html>
+
+// zica
