--- a/index.html
+++ b/index.html
@@ -2,34 +2,26 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>PACTO SATÂNICO</title>
+    <title>Cápsula do Tempo</title>
+    <link rel="stylesheet" href="./style/login.css">
+    <script src="/script/login.js"></script>
+    
 </head>
 <body>
-    <div class="form-structor">
-        <div class="signup">
-            <h2 class="form-title" id="signup"><span>or</span>Sign up</h2>
-            <div class="form-holder">
-                <input type="texto" class="input" placeholder="Nome" />
-                <input type="e-mail" class="input" placeholder="E-mail" />
-                <input type="senha" class="input" placeholder="senha" />
-            </div>
-            <button class="submit-btn">Sign up</button>
+    <section class="pagina-login">
+        <div class="login">
+            <form action="" class="form-login">
+                <label for="usuario">Usuário</label>
+                <input type="text" name="usuario" id="usuario">
+                <label for="senha">Senha</label>
+                <input type="password" name="senha" id="senha">
+
+                <button id="btnLogin" type="submit">Validar</button>
+                <a href="esqueci.html">Esqueci a Senha</a>
+            </form>
         </div>
-        <div class="login slide-up">
-            <div class="center">
-                <h2 class="form-title" id="login"><span>or</span>Log in</h2>
-                <div class="form-holder">
-                    <input type="e-mail" class="input" placeholder="E-mail" />
-                    <input type="senha" class="input" placeholder="senha" />
-                </div>
-                <button class="submit-btn">Log in</button>
-            </div>
-        </div>
-    </div>
-    <script src="main.js"></script>
+    </section>
 </body>
 </html>
-
-// zica
